--- a/CardGame/main.html
+++ b/CardGame/main.html
@@ -29,7 +29,7 @@
             <button id="light-btn" class="btn-neo">LIGHT_ATK</button>
             <button id="normal-btn" class="btn-neo">NORM_ATK</button>
             <button id="special-btn" class="btn-neo">SPEC_ATK</button>
-            <button id="area-btn" class="btn-neo btn-alt">AREA_BURST</button>
+            <!-- <button id="area-btn" class="btn-neo btn-alt">AREA_BURST</button> -->
             <button id="def-normal-btn" class="btn-neo btn-def">DEF_STD</button>
             <button id="def-hard-btn" class="btn-neo btn-def">DEF_MAX</button>
           </div>
