--- a/CardGame/main.html
+++ b/CardGame/main.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; connect-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
+    />
+
     <title>NEURAL-LINK BATTLE ARENA</title>
     <link rel="stylesheet" href="style.css" />
     <link
